<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CryptoEze</string>
    <string name="home_url" translatable="false">https://cryptoeze.com/login</string>
    <string name="channel_general_id" translatable="false">general</string>
    <string name="channel_general_name">Account &amp; activity</string>
    <string name="channel_general_desc">Deposits, withdrawals, security alerts and updates</string>

    <string name="exit_again">Click exit again</string>

    <string name="offline_title">You\'re offline</string>
    <string name="offline_body">Please check your Wi-Fi or mobile data.\nWe\'ll reconnect automatically as soon as you\'re back.</string>
    <string name="try_again">Try again</string>
    <string name="page_error_title">Something went wrong</string>
    <string name="page_error_body">We couldn\'t reach CryptoEze right now.\nPlease try again in a moment.</string>

    <string name="locked_title">CryptoEze is locked</string>
    <string name="locked_body">Unlock with your fingerprint, face or screen lock to continue.</string>
    <string name="unlock">Unlock</string>
    <string name="unlock_prompt_title">Unlock CryptoEze</string>
    <string name="unlock_prompt_subtitle">Confirm it\'s you</string>

    <string name="copied">Copied to clipboard</string>
    <string name="link_copied">Link copied</string>
    <string name="copy_link">Copy link</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="share_link">Share link</string>
    <string name="copy_image_link">Copy image link</string>
    <string name="download_image">Save image</string>
    <string name="downloading">Downloading %1$s…</string>
    <string name="download_saved">Saved to Downloads</string>
    <string name="download_failed">Download failed</string>
    <string name="no_app_found">No app found to open this link</string>
    <string name="choose_file">Choose file</string>
    <string name="update_ready">A new version is ready</string>
    <string name="restart">Restart</string>
</resources>
